--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@fluentui/react": "^7.147.1",
-    "@fluentui/react-northstar": "^0.51.2",
+    "@fluentui/react-northstar": "^0.51.3",
     "@microsoft/teams-js": "^1.8.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
@@ -14,12 +14,14 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "adaptivecards": "^2.4.0",
+    "formik": "^2.2.5",
     "msteams-react-base-component": "^2.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.5",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.31.1"
   },
   "scripts": {
     "start": "react-scripts start",
