--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public --no-dll",
+    "storybook": "start-storybook -p 6060 -s public --no-dll --no-manager-cache ",
     "build-storybook": "build-storybook -s public --no-dll"
   },
   "eslintConfig": {
