--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "markdown-it": "^12.0.4",
     "msteams-react-base-component": "^2.1.0",
     "react": "^17.0.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-table": "^7.7.0",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4",
     "yup": "^0.31.1"
